feat: persist account view history (#204)
